Fix: first block mobile friendly & change intro
First block has a bit more whitespace on resolutions lower than 768px

Intro text will now point to a general page on privacy instead of the
privacy statement per server. I think this solves our issue while still
pointing people in the right direction

--- a/assets/css/modern-business.css
+++ b/assets/css/modern-business.css
@@ -70,6 +70,13 @@ label[for='serverselect'] {
   display: inline; 
 }
 
+
+@media screen and (max-width: 768px) {
+  form#serverform div.col-md-4 {
+    margin-bottom: 1em; 
+  }
+}
+
 @media screen and (max-width: 370px) { 
   img.logo { 
     width: 7em; 
